Made some major speed improvements to the encoder.
git-svn-id: svn://svn.code.sf.net/p/liblzg/code/trunk@99 919d6115-40b2-4a68-9893-b32b752ddb1a

--- a/src/lib/TODO.txt
+++ b/src/lib/TODO.txt
@@ -52,8 +52,8 @@ Compression ratio degrading measures
 
 If introducing some sort of "quick mode", the following can be implemented:
 
-- Only try a maximum number of back matches (regardless of distance).
+x Only try a maximum number of back matches (regardless of distance).
 
-- Be satisfied with a certain match length (currently 128, perhaps e.g.
+x Be satisfied with a certain match length (currently 128, perhaps e.g.
   29/35/48/72?).
 
